# blog_examples

./: .gitignore  .gitmodules  README.md
einops/: Einops_Example.ipynb
libtorch_mps/: CMakeLists.txt  example-app.cpp  net.pt
linking_and_compling/: CMakeLists.txt  README.md  main.cpp
linking_and_compling/writer/: writer.cpp  writer.h
metric_tracking/: CMakeLists.txt  docker-compose.yaml  dockerfile  main.cpp
using_lightning/: Dockerfile  README.md  fasion_mnist_dm.py  pyproject.toml  resnet_lm.py  train.py
using_lightning/config/: config.yaml
using_vcpkg/: CMakeLists.txt  Dockerfile  main.cpp
using_vcpkg_easy/: CMakeLists.txt  Dockerfile  vcpkg.json
